# omah

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bacon.toml  install.sh  package.json  plan.md  turbo.json
.claude/: settings.json
.githooks/: commit-msg
.github/workflows/: auto-release.yml  release.yml
apps/desktop/: biome.json  package.json  vite.config.ts
apps/desktop/src/: App.css  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: about-window.tsx  donation-dialog.tsx  dotfile-dialog.tsx  mode-toggle.tsx  splash-screen.tsx  theme-provider.tsx
apps/desktop/src/hooks/: use-backup-restore.ts  use-config.ts  use-delete-dotfile.ts  use-diff.ts  use-status.ts  use-streaming-terminal.ts  use-symlink-mutation.ts
apps/desktop/src/lib/: ipc.ts  query-keys.ts
apps/desktop/src/routes/: __root.tsx  diff.tsx  dotfile.$name.tsx  index.tsx  settings.tsx
assets/: config.toml
crates/omah_bin/: Cargo.toml
crates/omah_bin/src/: cli.rs  main.rs
crates/omah_bin/src/commands/: add.rs  backup.rs  diff.rs  init.rs  list.rs  mod.rs  (+3 more)
crates/omah_core/: Cargo.toml
crates/omah_core/src/: lib.rs
crates/omah_lib/: Cargo.toml
crates/omah_lib/src/: config.rs  constants.rs  deps.rs  git.rs  lib.rs  ops.rs
crates/omah_structs/: Cargo.toml
crates/omah_structs/src/: lib.rs
crates/omah_tui/: Cargo.toml
crates/omah_tui/src/: app.rs  lib.rs  ui.rs
