[package]
name = "omah_lib"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
omah_structs = { path = "../omah_structs" }
expand-tilde = "0.6.1"
which = "7"
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
